fix spacing

--- a/webapp/src/app/components/projects/projects.component.scss
+++ b/webapp/src/app/components/projects/projects.component.scss
@@ -9,6 +9,7 @@
 .header-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1em;
 }
 
 .topic-item {
